@@ -1,3 +1,3 @@
-rcsb.utils.io >= 1.00
+rcsb.utils.io >= 1.14
 backports.range; python_version < "3.0"
 jsonschema >= 2.6.0
